apps/mealie/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: homelab
  labels:
    app: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000

      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.9.2
          ports:
            - containerPort: 9000
          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL                       
            readOnlyRootFilesystem: false

          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
