apps/mealie/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: homelab
spec:
  selector:
    app: mealie
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 9000 
      #nodePort: 30090
